--- a/package.json
+++ b/package.json
@@ -1,61 +1,44 @@
 {
-  "name": "single-spa-fragment",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "name": "melitechday-external",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit --passWithNoTests",
+    "lint": "vue-cli-service lint"
+  },
   "dependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-syntax-class-properties": "^7.10.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@material-ui/core": "^4.11.0",
-    "axios": "^0.20.0",
-    "babel": "^6.23.0",
-    "babel-loader": "^8.1.0",
-    "babel-polyfill": "^6.26.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "html-loader": "^1.3.2",
-    "http-errors": "^1.7.3",
-    "mime-db": "^1.45.0",
-    "moment": "^2.29.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "safe-buffer": "^5.2.1",
-    "single-spa": "^5.6.1",
-    "single-spa-react": "^3.1.0",
-    "single-spa-vue": "^1.10.0",
-    "string_decoder": "^1.3.0",
-    "strip-ansi": "^6.0.0",
-    "style": "0.0.3",
-    "vue": "^2.6.12",
-    "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.2.0"
+    "core-js": "^3.4.4",
+    "single-spa-vue": "^1.5.2",
+    "systemjs-webpack-interop": "^1.1.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "css-loader": "^4.3.0",
-    "style-loader": "^2.0.0"
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.0",
+    "@vue/cli-plugin-unit-jest": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^5.0.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "vue-cli-plugin-single-spa": "^1.1.0",
+    "vue-template-compiler": "^2.6.10"
   },
-  "scripts": {
-    "start": "webpack-dev-server --open",
-    "build": "webpack --config webpack.config.js -p"
+  "gitHooks": {
+    "pre-commit": "lint-staged"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JackDaniells/single-spa-demo.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JackDaniells/single-spa-demo/issues"
-  },
-  "homepage": "https://github.com/JackDaniells/single-spa-demo#readme"
+  "lint-staged": {
+    "*.{js,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
+  }
 }
